# src/main/resources/openapi.yaml
@@ -331,6 +331,134 @@ paths:
           description: Bad Gatway
           content: {}               
       x-codegen-request-body-name: body
+  /user:
+    post:
+      tags:
+        - User Information
+      summary: Adding a new User
+      requestBody:
+        description: user details that needs to be added
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+        required: true
+      responses:
+        '201':
+          description: Successful
+          content: {}      
+        '400':
+          description: Bad request input
+          content: {}
+        '404':
+          description: Data not found
+          content: {}
+        '500':
+          description: Invalid input
+          content: {}          
+        '502':
+          description: Bad Gatway
+          content: {}               
+      x-codegen-request-body-name: body
+    get:
+      tags:
+        - User Information
+      summary:  Getting all user details
+      responses:
+        '200':
+          description:  A list of all user details
+          content:
+            applicantion/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '201':
+          description: Successful
+          content: {}
+        '400':
+          description: Bad request input
+          content: {}
+        '404':
+          description: Data not found
+          content: {}
+        '500':
+          description: Invalid input
+          content: {}
+        '502':
+          description: Bad Gatway
+      x-codegen-request-body-name: body
+  /user/{id}:
+    get:
+      tags:
+        - User Information
+      summary: Getting user details by id
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: A list of a user details
+          content:
+            applicantion/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '201':
+          description: Successful
+          content: {}
+        '400':
+          description: Bad request input
+          content: {}
+        '404':
+          description: Data not found
+          content: {}
+        '500':
+          description: Invalid input
+          content: {}
+        '502':
+          description: Bad Gatway
+      x-codegen-request-body-name: body   
+    put:
+        tags:
+          - User Information
+        summary: Editing user details
+        parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+        requestBody:
+          description: User details that need to be added
+          content:
+            applicantion/json:
+              schema:
+                $ref: '#/components/schemas/User'
+          required: true      
+        responses:
+          '200':
+            description: A list of a user details
+            content:
+              applicantion/json:
+                schema:
+                  $ref: '#/components/schemas/User'
+          '201':
+            description: Successful
+            content: {}
+          '400':
+            description: Bad request input
+            content: {}
+          '404':
+            description: Data not found
+            content: {}
+          '500':
+            description: Invalid input
+            content: {}
+          '502':
+            description: Bad Gatway
+        x-codegen-request-body-name: body
+      
   
 components:
   schemas:
@@ -408,4 +536,29 @@ components:
           maxLength: 11
         isGuest: 
           type: integer
-          maxLength: 1      
+          maxLength: 1    
+          
+    User:
+      type: object
+      required:
+        - id
+        - email
+        - username
+        - mobile
+        - password
+      properties:
+        id:
+          type: integer
+          maxLength: 11
+        email:
+          type: string
+          maxLength: 200
+        username:
+          type: string
+          maxLength: 100
+        mobile:
+          type: integer
+          maxLength: 10
+        password:
+          type: string
+          maxLength: 200      
